--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sendgrid/mail": "^7.4.0",
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -17,10 +18,12 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.10.15",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "short-id": "0.1.0-1"
   }
 }
